# pika_ros

./: .gitignore  .gitmodules  README.md  TODO  launch_rs.py  open_multi_gripper.launch.py  open_multi_sensor.launch.py  openpi_data_params.yaml
scripts/: same_hub.sh  setup_device.py  setup_header.bash  setup_multi_gripper.bash  setup_multi_sensor.bash  start_header.bash  start_multi_gripper.bash  start_multi_sensor.bash  start_single_fisheye.bash  usb_camera.py
src/data_msgs/: CMakeLists.txt  package.xml
src/data_msgs/msg/: Gripper.msg
src/data_tools/: CMakeLists.txt  README.md  package.xml
src/data_tools/config/: aloha_data_params.yaml
src/data_tools/launch/: run_data_capture.launch  run_data_capture.launch.py
src/data_tools/scripts/: data_capture_node.py  example_image_publisher.py
src/sensor_tools/: package.xml
src/sensor_tools/launch/: open_header-camera_only.launch.py  open_header.launch.py
src/sensor_tools/src/: serial_gripper_imu.cpp
