<?xml version="1.0"?>
<package format="2">
  <name>data_msgs</name>
  <version>1.0.0</version>
  <description>Custom message definitions for Pika data capture</description>
  <maintainer email="support@agilex.ai">Agilex Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
  </export>
</package>
